<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings" android:icon="@android:drawable/ic_menu_manage"/>
    
    <item
        android:id="@+id/action_offine_search"
        android:orderInCategory="25"
        android:showAsAction="never|collapseActionView"
        android:title="@string/action_offline_search" android:icon="@drawable/ic_action_local"/>
    
    <item
        android:id="@+id/action_continue_later"
        android:orderInCategory="25"
        android:showAsAction="never|collapseActionView"
        android:title="@string/continue_later" android:icon="@drawable/ic_menu_forward"/>
    
    <item
        android:id="@+id/action_continue_later_after"
        android:orderInCategory="25"
        android:showAsAction="never|collapseActionView"
        android:title="@string/continue_later_after" android:icon="@drawable/ic_menu_forward"/>
</menu>
