<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always|collapseActionView"
        android:title="@string/action_settings" android:icon="@android:drawable/ic_menu_manage"/>
    
    <item
        android:id="@+id/action_export"
        android:orderInCategory="50"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_export" android:icon="@android:drawable/ic_menu_set_as"/>
    
    <item
        android:id="@+id/action_online_search"
        android:orderInCategory="25"
        android:showAsAction="never|collapseActionView"
        android:title="@string/action_online_search" android:icon="@drawable/ic_action_internet"/>

</menu>
